# ros2_project

./: .gitignore
install/: local_setup.sh  setup.sh
install/gimbal_controller/include/gimbal_controller/gimbal_controller/: gimbal_controller.hpp  validate_gimbal_controller_parameters.hpp  visibility_control.h
install/gimbal_controller/include/gimbal_controller_parameters/: gimbal_controller_parameters.hpp  validate_gimbal_controller_parameters.hpp
install/gimbal_controller/share/ament_index/resource_index/controller_interface__pluginlib__plugin/: gimbal_controller
install/gimbal_controller/share/ament_index/resource_index/package_run_dependencies/: gimbal_controller
install/gimbal_controller/share/ament_index/resource_index/parent_prefix_path/: gimbal_controller
install/gimbal_controller/share/gimbal_controller/: gimbal_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gimbal_controller/share/gimbal_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gimbal_controllerExport-debug.cmake  gimbal_controllerConfig-version.cmake  gimbal_controllerConfig.cmake
install/gimbal_controller/share/gimbal_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/motor_interface/include/motor_interface/: motor.hpp
install/motor_interface/include/motor_interface/include/motor_interface/: can_instance.hpp  motor_instance.hpp  visibility_control.h
install/motor_interface/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: motor_interface
install/motor_interface/share/ament_index/resource_index/package_run_dependencies/: motor_interface
install/motor_interface/share/ament_index/resource_index/parent_prefix_path/: motor_interface
install/motor_interface/share/motor_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  motor_interface.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_interface/share/motor_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  motor_interfaceConfig-version.cmake  motor_interfaceConfig.cmake
install/motor_interface/share/motor_interface/config/: diffbot_controllers.yaml  gimbal_controller.yaml
install/motor_interface/share/motor_interface/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/motor_interface/share/motor_interface/launch/: gimbal.launch.py  gimbal_description.urdf.xacro  rrbot.launch.py
install/motor_interface/share/motor_interface/ros2_control/: motor.ros2_control.xacro
install/motor_interface/share/motor_interface/urdf/: motor.urdf.xacro
install/test/share/test/: package.dsv  package.ps1  package.sh
install/tool_pid/include/tool_pid/tool_pid/: pid.hpp
install/tool_pid/share/ament_index/resource_index/package_run_dependencies/: tool_pid
install/tool_pid/share/ament_index/resource_index/parent_prefix_path/: tool_pid
install/tool_pid/share/tool_pid/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tool_pid/share/tool_pid/cmake/: tool_pidConfig-version.cmake  tool_pidConfig.cmake
install/tool_pid/share/tool_pid/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_test  latest_test-result
src/gimbal_controller/: CMakeLists.txt  gimbal_controller.xml  package.xml
src/gimbal_controller/include/gimbal_controller/: gimbal_controller.hpp  visibility_control.h
src/gimbal_controller/src/: gimbal_controller.cpp  gimbal_controller.yaml
src/motor_interface/: CMakeLists.txt  motor_interface.xml  package.xml
src/motor_interface/bringup/config/: gimbal_controller.yaml
src/motor_interface/bringup/launch/: gimbal.launch.py
src/motor_interface/description/launch/: gimbal_description.urdf.xacro
src/motor_interface/description/ros2_control/: motor.ros2_control.xacro
src/motor_interface/description/urdf/: motor.urdf.xacro
src/motor_interface/include/motor_interface/: can_instance.hpp  motor.hpp  motor_instance.hpp  visibility_control.h
src/motor_interface/src/: can_instance.cpp  motor.cpp  motor_instance.cpp
src/motor_interface/test/: test_motor.cpp
src/pid/: CMakeLists.txt  package.xml
src/pid/include/pid/: pid.hpp  pid_control.hpp  pid_type.hpp
src/pid/src/: pid.cpp  pid_control.cpp
src/tool_pid/: CMakeLists.txt  package.xml
src/tool_pid/include/tool_pid/: pid.hpp
src/tool_pid/src/: pid.cpp
